syntax = "proto3";

package ruek.detail;

message PaginationToken {
	string last_id = 1;
}
